# krecorder

./: .craft.ini  .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  krecorder.kdev4  krecorder.svg.license  logo.png.license  org.kde.krecorder.appdata.xml  org.kde.krecorder.desktop  org.kde.krecorder.json  org.kde.krecorder.json.license  org.kde.voicememo.appdata.xml  org.kde.voicememo.desktop  project.conf  snapcraft.yaml
.kdev4/: krecorder.kdev4
.reuse/: dep5
LICENSES/: GPL-3.0-or-later
android/: AndroidManifest.xml  build.gradle
elements/: freedesktop-sdk.bst  org.kde.Platform.bst  org.kde.Sdk.bst  org.kde.krecorder.bst  symlinks.bst
elements/org.kde.krecorder/: krecorder.bst
elements/plugins/: buildstream-plugins-community.bst  buildstream-plugins.bst
include/: aliases.yml
po/ar/: krecorder.po
po/ast/: krecorder.po
po/bg/: krecorder.po
po/ca/: krecorder.po
po/ca@valencia/: krecorder.po
po/cs/: krecorder.po
po/de/: krecorder.po
po/el/: krecorder.po
po/en_GB/: krecorder.po
po/eo/: krecorder.po
po/es/: krecorder.po
po/eu/: krecorder.po
po/fi/: krecorder.po
po/fr/: krecorder.po
po/ga/: krecorder.po
po/gl/: krecorder.po
po/he/: krecorder.po
po/hi/: krecorder.po
po/hu/: krecorder.po
po/ia/: krecorder.po
po/is/: krecorder.po
po/it/: krecorder.po
po/ja/: krecorder.po
po/ka/: krecorder.po
po/ko/: krecorder.po
po/lt/: krecorder.po
po/lv/: krecorder.po
po/nl/: krecorder.po
po/nn/: krecorder.po
po/pa/: krecorder.po
po/pl/: krecorder.po
po/pt/: krecorder.po
po/pt_BR/: krecorder.po
po/ro/: krecorder.po
po/ru/: krecorder.po
po/sa/: krecorder.po
po/sk/: krecorder.po
po/sl/: krecorder.po
po/sv/: krecorder.po
po/tr/: krecorder.po
po/ug/: krecorder.po
po/uk/: krecorder.po
po/x-test/: krecorder.po
po/zh_CN/: krecorder.po
po/zh_TW/: krecorder.po
src/: CMakeLists.txt  Messages.sh  Settings.qml  audioplayer.cpp  audioplayer.h  audioprober.cpp  audioprober.h  audiorecorder.cpp  audiorecorder.h  krecordersettings.kcfg  krecordersettings.kcfgc  main.cpp  recording.cpp  recording.h  recordingmodel.cpp  recordingmodel.h  resources.qrc  settingsmodel.cpp  settingsmodel.h  utils.cpp  utils.h
src/contents/ui/: AboutPage.qml  Bar.qml  DefaultPage.qml  FloatingActionButton.qml  GradientBar.qml  ListDelegate.qml  Main.qml  PlayerPage.qml  Record.qml  RecordPage.qml  RecordingComponent.qml  RecordingListDelegate.qml  RecordingListPage.qml  Settings.qml  SettingsComponent.qml  Visualization.qml  main.qml
src/contents/ui/components/: FloatingActionButton.qml  ListDelegate.qml  RoundFlatButton.qml  ToolTipToolButton.qml  Visualization.qml
src/contents/ui/settings/: SettingsComponent.qml  SettingsDialog.qml  SettingsPage.qml  SettingsWindow.qml
src/qt5/: CMakeLists.txt  audioplayer.cpp  audioplayer.h  audioprober.cpp  audioprober.h  audiorecorder.cpp  audiorecorder.h  main.cpp  recording.h  recordingmodel.h  settingsmodel.cpp  utils.cpp
src/qt5/contents/ui/: RecordingListDelegate.qml  RecordingListPage.qml
src/qt5/contents/ui/components/: FloatingActionButton.qml  ListDelegate.qml  RoundFlatButton.qml
src/qt5/contents/ui/settings/: SettingsPage.qml
